# rust-regex-gui

./: .dockerignore  .editorconfig  .gitignore  .releaserc  .releaserc.json  404.html  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.web  LICENCE  Makefile  README.md  deny.toml  docker-compose.yml  index.html  package.json  tauri.conf.json  techdocs_metadata.json  vite.config.js
.github/workflows/: on_docs_change.yml  on_pr_open.yml  on_pr_synchronize.yml  on_source_change.yml  static-analysis.yml
architecture/: index.html
development/: index.html
docs/techdocs/: mkdocs.yml
docs/techdocs/docs/: architecture.md  development.md  index.md  usage.md
docs/techdocs/docs/diagrams/: architecture.mmd
search/: search_index.json
src/: ansi.rs  lib.rs  main.rs  tauri_app.rs  theme.rs
src/application/: mod.rs
src/domain/: mod.rs
src/telemetry/: mod.rs
usage/: index.html
