[package]
name = "rust-regex-gui"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["glow", "default_fonts", "x11", "wayland"] }
log = "0.4"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
