[package]
name = "rust-regex-gui"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"
license = "Apache-2.0"

[workspace]
resolver = "2"

[dependencies]
eframe = { version = "0.31.1", default-features = false, features = ["glow", "default_fonts", "x11", "wayland",] }
log = "0.4.27"
regex = "1.11.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1" 
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
