[package]
name = "rust-regex-gui"
description = "A GUI application for testing and visualizing Rust regex patterns."
documentation = "https://webgrip.github.io/rust-regex-gui/"
homepage = "https://github.com/webgrip/rust-regex-gui"
repository = "https://github.com/webgrip/rust-regex-gui"
readme = "README.md"
edition = "2024"
rust-version = "1.87.0"
license-file = "LICENSE"
keywords = ["regex", "gui", "eframe", "egui", "rust"]
version = "1.1.2"

[workspace]
resolver = "2"

[dependencies]
eframe = { version = "0.31.1", default-features = false, features = ["glow", "default_fonts", "x11", "wayland",] }
egui_extras = "0.31"
log = "0.4.27"
regex = "1.11.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
walkdir = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
